alignment fixes for homepage

--- a/le-app/src/css/Homepage.module.css
+++ b/le-app/src/css/Homepage.module.css
@@ -49,7 +49,7 @@
     width: 250px;
   }
 
-  .badge {
-    position: absolute;
-    bottom: 100px;
-  }
+   .badge {
+    margin-top: 180px;
+  
+  } 
